Contract deploy screen text overflow style fixes

--- a/src/Pages/RejectNotification/style.module.scss
+++ b/src/Pages/RejectNotification/style.module.scss
@@ -5,9 +5,11 @@
     padding: 30px 37px;
     padding-bottom: 0;
   }
-&__transactionDetailMain{
-  padding: 30px 24px;
-}
+
+  &__transactionDetailMain {
+    padding: 30px 24px;
+  }
+
   &__flexList {
     display: flex;
     justify-content: space-between;
@@ -102,7 +104,7 @@
 
         span {
           max-width: 90px;
-          white-space: nowrap;
+          // white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
           // display: inline-flex;
@@ -146,7 +148,8 @@
         // border-radius: 0px 12px 12px 0px;
       }
     }
-    &__txnDetailHeading{
+
+    &__txnDetailHeading {
       background: linear-gradient(91.26deg, #0071ff 0%, #54f0d1 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
